probando fix video celu

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -17,7 +17,9 @@
   --tertiary:#2f2f2f;
   --quaternary:#fff;
 }
-
+// html{
+//   scroll-behavior: smooth;
+// }
 .snap{
   scroll-snap-align: start;
 }
