--- a/scss/main.scss
+++ b/scss/main.scss
@@ -12,17 +12,15 @@
 @import "preloader";
 
 :root{
-  --main:#4fe1d0;
+  --main:#4fe1d0; 
   --secondary:#040404;
   --tertiary:#2f2f2f;
   --quaternary:#fff;
 }
-// html{
-//   scroll-behavior: smooth;
-// }
-.snap{
-  scroll-snap-align: start;
+html, body { 
+  scroll-behavior: smooth
 }
+
 * {
  
   
