--- a/scss/_about-me.scss
+++ b/scss/_about-me.scss
@@ -23,6 +23,7 @@
     display: flex;
     flex-direction: column;
     // top: -35rem;
+    
     #texto {
       color: white;
       // left: 50vw;
@@ -32,6 +33,12 @@
       margin: 3% 0;
       background: rgba(255, 255, 255, 0.1);
       padding: 9%;
+      transition: all .4s ease-in-out;
+      &#texto:hover{
+        background-color :rgba(255, 255, 255, 0.2);;
+        transform: scale(1.025);
+      }
+      
 
       h2 {
         text-transform: uppercase;
@@ -46,6 +53,7 @@
       }
     }
   }
+  
 }
 
 @keyframes aparece {
