--- a/scss/_banner.scss
+++ b/scss/_banner.scss
@@ -46,15 +46,15 @@
   display: flex;
   color: #fff;
   justify-content: center;
-  padding-bottom: 5vh;
+  // padding-bottom: 5vh;
   background-size: cover;
-  background: linear-gradient(
-    to top right,
-    black,
-    var(--tertiary),
-    #524E4A,
-    white
-  );
+  // background: linear-gradient(
+  //   to top right,
+  //   black,
+  //   var(--tertiary),
+  //   #524E4A,
+  //   white
+  // );
 
   .banner-video {
     position: absolute;
@@ -62,6 +62,7 @@
     overflow: hidden;
     text-align: center;
     width: -webkit-fill-available; 
+    
   }
   .banner-content {
     display: flex;
@@ -72,6 +73,8 @@
     max-height: 1440px;
     margin: 25vh 5% 0vh 5%;
     position: relative;
+    background: linear-gradient(transparent,transparent,transparent,var(--secondary));
+
     .banner-titulo {
       max-width: 100vw;
       div {
@@ -147,6 +150,21 @@
         }
       }
     }
+    // .fa-chevron-down{
+    //   position: absolute;
+    //   font-size: 2rem;
+    //   animation: latir .5s alternate infinite;
+    //   color: var(--main);
+    //   right: 11vw;
+    //   &.first{
+    //     top: 65vh;
+    //   }
+    //   &.second{
+    //     bottom: 28vh;
+    //   }
+    // }
+    
+    
   }
 }
 .content {
@@ -155,6 +173,16 @@
   height: 1440px;
   overflow: hidden;
 }
+
+@keyframes latir {
+  0%{
+    transform: scale(1);
+  }
+  100%{
+    transform: scale(1.2);
+  }
+}
+
 
 @keyframes cambiar {
   0% {
