--- a/scss/_soft-skills.scss
+++ b/scss/_soft-skills.scss
@@ -14,6 +14,7 @@
     z-index: 2;
     width: 100vw;
     min-height: 100vh;
+    background: linear-gradient(transparent,var(--secondary));
   }
 
   .ssContainer {
