--- a/css/main.css
+++ b/css/main.css
@@ -765,6 +765,46 @@
 .contact .container .row100 .col input[type=number] {
   -moz-appearance: textfield;
 }
+.contact .container .social-contact {
+  display: flex;
+  justify-content: center;
+  margin: 20px 0 10px;
+}
+.contact .container .social-contact a {
+  background: rgba(0, 0, 0, 0.7);
+  font-weight: 600;
+  display: block;
+  margin: 3px;
+  padding: 10px;
+  border-radius: 12px;
+  transition: 1s;
+}
+.contact .container .social-contact a i {
+  font-size: 35px;
+  width: 35px;
+  height: 35px;
+  transition: 0.5s ease-out;
+  text-align: center;
+  text-shadow: 0 19px 38px rgba(79, 225, 208, 0.3), 0 15px 12px rgba(79, 225, 208, 0.22);
+}
+.contact .container .social-contact a:nth-child(1) i {
+  color: gray;
+}
+.contact .container .social-contact a:nth-child(2) i {
+  color: var(--main);
+}
+.contact .container .social-contact a:nth-child(3) i {
+  color: transparent;
+  background-image: linear-gradient(45deg, var(--main), #b7a8e7, #735acf);
+  -webkit-background-clip: text;
+  font-weight: 600;
+}
+.contact .container .social-contact a:nth-child(4) i {
+  color: var(--main);
+}
+.contact .container .social-contact a:nth-child(5) i {
+  color: gray;
+}
 
 .textarea {
   height: 80px !important;
@@ -848,49 +888,6 @@
 }
 footer {
   background-color: var(--tertiary);
-}
-footer .social-footer {
-  position: relative;
-  top: -40%;
-  display: flex;
-  justify-content: center;
-}
-footer .social-footer a {
-  background: rgba(0, 0, 0, 0.7);
-  font-size: 17px;
-  font-weight: 600;
-  display: block;
-  margin: 3px;
-  padding: 10px;
-  border-radius: 12px;
-  transition: 1s;
-  transition-property: transform;
-}
-footer .social-footer a i {
-  font-size: 30px;
-  width: 30px;
-  height: 30px;
-  transition: 0.5s ease-out;
-  text-align: center;
-  text-shadow: 0 19px 38px rgba(79, 225, 208, 0.3), 0 15px 12px rgba(79, 225, 208, 0.22);
-}
-footer .social-footer a:nth-child(1) i {
-  color: gray;
-}
-footer .social-footer a:nth-child(2) i {
-  color: var(--main);
-}
-footer .social-footer a:nth-child(3) i {
-  color: transparent;
-  background-image: linear-gradient(45deg, var(--main), #b7a8e7, #735acf);
-  -webkit-background-clip: text;
-  font-weight: 600;
-}
-footer .social-footer a:nth-child(4) i {
-  color: var(--main);
-}
-footer .social-footer a:nth-child(5) i {
-  color: gray;
 }
 footer .credits {
   align-items: center;
