--- a/scss/_about-me.scss
+++ b/scss/_about-me.scss
@@ -17,6 +17,7 @@
     width: 25vw;
     animation-name: imgChanger;
     animation-duration: 1s;
+    cursor: pointer;
     // top: 15vh;
   }
   .about-me_texto {
