--- a/css/main.css
+++ b/css/main.css
@@ -471,6 +471,7 @@
   width: 25vw;
   animation-name: imgChanger;
   animation-duration: 1s;
+  cursor: pointer;
 }
 .about-me .about-me_texto {
   display: flex;
