--- a/scss/_contact.scss
+++ b/scss/_contact.scss
@@ -117,8 +117,9 @@
           color: var(--secondary);
           font-size: 18px;
           border-radius: 2px;
-          transition: all .5s ease-in;
+          transition: all .3s ease-in;
           box-shadow: 0 19px 38px rgba(79, 225, 208,0.30), 0 15px 12px rgba(79, 225, 208,0.22);
+          
           &:hover{
             transform: scale(1.1);
            
@@ -151,15 +152,17 @@
         margin: 3px;
         padding: 10px;
         border-radius: 12px;
-        transition: 1s;
         i{
         font-size: 35px;
         width: 35px;
         height: 35px;
-        transition: .5s ease-out;
+        transition: .4s ease-out;
         text-align: center;
         text-shadow: 0 19px 38px rgba(79, 225, 208,0.30), 0 15px 12px rgba(79, 225, 208,0.22);
-  
+        -webkit-box-reflect: below 0rem linear-gradient(transparent,transparent, rgba(0,0,0,0.2));
+          &:hover{
+            transform: scale(1.2);
+          }
         }
       }
       a:nth-child(1) i {
