--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css?family=Montserrat&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Pacifico&display=swap");
 .banner {
   display: flex;
   color: #fff;
@@ -347,7 +348,11 @@
   overflow: hidden;
   text-align: center;
   height: 100vh;
-  z-index: 3;
+  z-index: 5;
+}
+.portfolio .max-width span {
+  position: absolute;
+  top: 5%;
 }
 .portfolio:before {
   content: "";
@@ -618,9 +623,12 @@
 .soft-skills .ssContainer .softskills h4 {
   cursor: pointer;
   color: white;
-  font-size: 2.5rem;
+  font-size: 2rem;
   z-index: 4;
   position: relative;
+  font-style: italic;
+  font-weight: 300;
+  text-transform: uppercase;
 }
 .soft-skills .ssContainer .fas {
   display: none;
@@ -749,7 +757,7 @@
   color: var(--secondary);
   font-size: 18px;
   border-radius: 2px;
-  transition: all 0.5s ease-in;
+  transition: all 0.3s ease-in;
   box-shadow: 0 19px 38px rgba(79, 225, 208, 0.3), 0 15px 12px rgba(79, 225, 208, 0.22);
 }
 .contact .container .row100 .col input[type=submit]:hover {
@@ -778,15 +786,18 @@
   margin: 3px;
   padding: 10px;
   border-radius: 12px;
-  transition: 1s;
 }
 .contact .container .social-contact a i {
   font-size: 35px;
   width: 35px;
   height: 35px;
-  transition: 0.5s ease-out;
+  transition: 0.4s ease-out;
   text-align: center;
   text-shadow: 0 19px 38px rgba(79, 225, 208, 0.3), 0 15px 12px rgba(79, 225, 208, 0.22);
+  -webkit-box-reflect: below 0rem linear-gradient(transparent, transparent, rgba(0, 0, 0, 0.2));
+}
+.contact .container .social-contact a i:hover {
+  transform: scale(1.2);
 }
 .contact .container .social-contact a:nth-child(1) i {
   color: gray;
@@ -816,7 +827,7 @@
 }
 
 .social {
-  z-index: 3;
+  z-index: 4;
   position: fixed;
   bottom: 45vh;
   right: 0;
@@ -893,14 +904,14 @@ footer {
 footer .credits {
   align-items: center;
   display: flex;
-  justify-content: center;
+  justify-content: space-evenly;
 }
 footer .credits small {
   color: #5b5e62;
   text-decoration: none;
 }
 footer .credits a {
-  margin: 10%;
+  margin: 10% 0;
   text-decoration: none;
   color: #A6ABB2;
 }
