--- a/scss/_soft-skills.scss
+++ b/scss/_soft-skills.scss
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap');
 .soft-skills {
   height: 100vh;
   width: 100vw;
@@ -29,10 +30,12 @@
       h4 {
         cursor: pointer;
         color: white;
-        font-size: 2.5rem;
+        font-size: 2rem;
         z-index: 4;
         position: relative;
-        
+        font-style: italic;
+        font-weight: 300;
+        text-transform: uppercase;
         
       }
       
