--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css?family=Montserrat&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Karla:ital,wght@0,200;0,300;0,400;1,200;1,300;1,400&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Pacifico&display=swap");
 .banner {
   display: flex;
@@ -957,6 +958,9 @@ html, body {
 }
 * ::-webkit-scrollbar {
   display: none;
+}
+* h2, * h3, * h4, * p, * li {
+  font-family: "Karla", sans-serif;
 }
 * h3 {
   text-transform: uppercase;
