--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css?family=Montserrat&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Karla:ital,wght@0,200;0,300;0,400;1,200;1,300;1,400&display=swap');
 @import "banner";
 @import "header";
 @import "media";
@@ -33,6 +34,9 @@ html, body {
   margin: 0;
   padding: 0;
   font-family: "Montserrat", sans-serif;
+  h2,h3,h4,p,li{
+    font-family: 'Karla', sans-serif;
+  }
   h3 {
     text-transform: uppercase;
     color: white;
