--- a/scss/_banner.scss
+++ b/scss/_banner.scss
@@ -61,7 +61,7 @@
     top: 0;
     overflow: hidden;
     text-align: center;
-    width: -webkit-fill-available; 
+    width: stretch; 
     
   }
   .banner-content {
