--- a/scss/_soft-skills.scss
+++ b/scss/_soft-skills.scss
@@ -20,6 +20,9 @@
 
   .ssContainer {
     padding: 7% 10% 10%;
+    @media screen and (max-width:620px) {
+      padding: 20% 10% 10%;
+    }
     .softskills {
       background-color: rgba(0, 0, 0, 0.2);
       z-index: 3;
